# evo-agents

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  publish.sh
.github/workflows/: ci.yml  release.yml
evo-agent-sdk/: Cargo.toml
evo-agent-sdk/src/: gateway_client.rs  handler.rs  health_check.rs  lib.rs  runner.rs  self_upgrade.rs  skill_engine.rs  soul.rs
evo-agent-sdk/src/kernel_handlers/: building.rs  evaluation.rs  learning.rs  mod.rs  pre_load.rs  skill_manage.rs
kernel/building/: soul.md
kernel/pre-load/: soul.md
kernel/skill-manage/: download-runner.sh
runner/: Cargo.toml
runner/src/: event_handler.rs  gateway_client.rs  health_check.rs  main.rs  skill_engine.rs  soul.rs
