[package]
name = "evo-agent-sdk"
version = "0.4.0"
edition = "2024"
description = "SDK for building agents in the Evo self-evolution system"
license = "MIT"
repository = "https://github.com/ai-evo-agents/evo-agents"
keywords = ["agents", "ai", "self-evolution", "sdk"]
categories = ["development-tools"]

[dependencies]
evo-common         = { path = "../../evo-common", features = ["tracing-otel"] }
rust_socketio      = { version = "0.6", features = ["async"] }
tokio              = { version = "1", features = ["full"] }
reqwest            = { version = "0.12", features = ["json", "native-tls-vendored", "stream"] }
futures-util       = "0.3"
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0"
toml               = "0.8"
chrono             = { version = "0.4", features = ["serde"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender   = "0.2"
anyhow             = "1.0"
thiserror          = "2.0"
uuid               = { version = "1.0", features = ["v4"] }
async-trait        = "0.1"
