[package]
name = "runner"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "evo-runner"
path = "src/main.rs"

[dependencies]
rust_socketio  = { version = "0.6", features = ["async"] }
tokio          = { version = "1", features = ["full"] }
reqwest        = { version = "0.12", features = ["json"] }
serde          = { version = "1.0", features = ["derive"] }
serde_json     = "1.0"
toml           = "0.8"
chrono         = { version = "0.4", features = ["serde"] }
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender   = "0.2"
anyhow         = "1.0"
thiserror      = "2.0"
uuid           = { version = "1.0", features = ["v4"] }
evo-common     = "0.2"
